--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
-title: Your awesome title
+title: SeqAn
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: SeqAn
+  email: seqan-dev@lists.fu-berlin.de
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  SeqAn is an open source C++ library of efficient algorithms and data
+  structures for the analysis of sequences with the focus on biological data.
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
@@ -16,8 +15,8 @@ minima:
 
   # generate social links in footer
   social_links:
-    twitter: jekyllrb
-    github:  jekyll
+    twitter: SeqAnLib
+    github:  seqan
     # devto: jekyll
     # dribbble: jekyll
     # facebook: jekyll
