--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,9 @@ minima:
     # - username: jekyll2
     #   instance: example.com
 
+collections:
+  people:
+
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 #header_pages:
