--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ show_excerpts: true # set to true to show excerpts on the homepage
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
+  skin: "seqan"
   date_format: "%b %-d, %Y"
 
   # generate social links in footer
